Adicionado catálogo de videos

--- a/style/catalogo.css
+++ b/style/catalogo.css
@@ -1,9 +1,11 @@
 @import url('/style/colors.css');
 
 .filme-principal {
+    position: relative;
+    top: 0;
+    left: 0;
+    background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)100%);
     font-size: 16px;
-    background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)100%), url("/img/mask.jpg");
-    background-position-y: -250px;
     height: 600px;
     background-size: cover;
     display: flex;
@@ -37,8 +39,4 @@
 
 i.fas {
     margin-right: 1vw;
-}
-
-.carrosel-filmes{
-    margin-top: 5px;
 }
