--- a/style/carrosel.css
+++ b/style/carrosel.css
@@ -4,7 +4,39 @@
 }
 
 .item {
+    position: relative;
     cursor: pointer;
+    background: white;
+    width: 400px;
+    height: 500px;
+}
+
+video {
+    width: 400px;
+    height: 500px;
+    object-fit: fill;
+}
+
+.thumb-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 600px;
+    height: 100%;
+    z-index: 999;
+    background: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, .50)100%);
+}
+
+.thumb-overlay h2 {
+    background: rgba(255, 255, 255, .10);
+    position: absolute;
+    text-align: center;
+    left: 0;
+    bottom: -100px;
+    transition: bottom 0.5s linear;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.thumb-overlay:hover h2 {
+    bottom: 100px;
 }
