--- a/style/catalogo.css
+++ b/style/catalogo.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     align-content: flex-start;
+    cursor: pointer;
 }
 
 .filme-principal .descricao {
